--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         body {
             background-color: black;
             color: white;
+            display: flex;
+            align-items: center;
+            align-self: center;
+            vertical-align: middle;
         }
         .sentence {
             font-size: 16px;
