--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             vertical-align: middle;
         }
         .sentence {
+            display: flex;
+            align-items: center;
+            align-self: center;
+            vertical-align: middle;
             font-size: 16px;
         }
     </style>
