--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
         body {
             background-color: black;
             color: white;
-            display: flex;
-            align-items: center;
-            align-self: center;
-            vertical-align: middle;
         }
         .sentence {
-            display: flex;
-            align-items: center;
-            align-self: center;
-            vertical-align: middle;
-            font-size: 16px;
+            top: 50%;
+            left: 50%;
+            position: fixed;
+            transform: translate(-50%, -50%);
+            font-size: 20px;
         }
     </style>
 </head>
