--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             color: white;
         }
         .sentence {
+            font-size: 16px;
             top: 50%;
             left: 50%;
             position: fixed;
