--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         body {
             background-color: black;
             color: white;
+            padding: 40px;
+            border: 1px solid white;
         }
         .sentence {
             font-size: 16px;
@@ -21,6 +23,6 @@
     </style>
 </head>
 <body>
-    <div class="sentence">Haciendo Locuras por tí</div>
+    <div class="sentence">Bésalo!!</div>
 </body>
 </html>
