--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
             background-color: black;
             color: white;
         }
+
         .sentence {
             font-size: 16px;
             top: 50%;
@@ -22,7 +24,24 @@
         }
     </style>
 </head>
+
 <body>
-    <div class="sentence">Bésalo!!</div>
+    <div class="sentence">
+        Táctica y estrategia
+        Mi táctica es mirarte, aprender cómo sos
+        Quererte como sos
+        Mi táctica es hablarte y escucharte
+        Construir con palabras un puente indestructible
+        Mi táctica es quedarme en tu recuerdo
+        No sé cómo, ni sé con qué pretexto, pero quedarme en vos
+        Mi táctica es ser franco y saber que sos franca
+        Y que no nos vendamos simulacros
+        Para que, entre los dos, no haya telón ni abismos
+        Mi estrategia es, en cambio, más profunda y más simple
+        Mi estrategia es que un día cualquiera
+        No sé cómo, ni sé con qué pretexto
+        Por fin, me necesites
+    </div>
 </body>
+
 </html>
