--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             left: 50%;
             position: fixed;
             transform: translate(-50%, -50%);
-            font-size: 50px;
+            font-size: 10px;
             padding: 40px;
             border: 1px solid white;
         }
@@ -27,20 +27,23 @@
 
 <body>
     <div class="sentence">
-        Táctica y estrategia
-        Mi táctica es mirarte, aprender cómo sos
-        Quererte como sos
-        Mi táctica es hablarte y escucharte
-        Construir con palabras un puente indestructible
-        Mi táctica es quedarme en tu recuerdo
-        No sé cómo, ni sé con qué pretexto, pero quedarme en vos
-        Mi táctica es ser franco y saber que sos franca
-        Y que no nos vendamos simulacros
-        Para que, entre los dos, no haya telón ni abismos
-        Mi estrategia es, en cambio, más profunda y más simple
-        Mi estrategia es que un día cualquiera
-        No sé cómo, ni sé con qué pretexto
-        Por fin, me necesites
+        Táctica y estrategia<br><br>
+        Mi táctica es mirarte, aprender cómo sos<br>
+        Quererte como sos<br>
+        Mi táctica es hablarte y escucharte<br>
+        Construir con palabras un puente indestructible<br>
+        Mi táctica es quedarme en tu recuerdo<br>
+        No sé cómo, ni sé con qué pretexto, pero quedarme en vos<br>
+        Mi táctica es ser franco y saber que sos franca<br>
+        Y que no nos vendamos simulacros<br>
+        Para que, entre los dos, no haya telón ni abismos<br>
+        Mi estrategia es, en cambio, más profunda y más simple<br>
+        Mi estrategia es que un día cualquiera<br>
+        No sé cómo, ni sé con qué pretexto<br>
+        Por fin, me necesites<br><br>
+
+        - Mario Benedetti<br>
+
     </div>
 </body>
 
