--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
             border: 1px solid white;
         }
     </style>
+
+    <script type="module">
+
+        // Find the latest version by visiting https://cdn.skypack.dev/three.
+
+        import * as THREE from 'https://cdn.skypack.dev/three@<version>';
+
+        const scene = new THREE.Scene();
+        console.log(scene);
+
+    </script>
 </head>
 
 <body>
