--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         // Find the latest version by visiting https://cdn.skypack.dev/three.
 
-        import * as THREE from 'https://cdn.skypack.dev/three@<version>';
+        import * as THREE from 'https://cdn.skypack.dev/three@0.134.0';
 
         const scene = new THREE.Scene();
         console.log(scene);
