--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         document.body.appendChild(renderer.domElement);
 
         const geometry = new THREE.BoxGeometry();
-        const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+        const material = new THREE.MeshBasicMaterial({ color: 0x2D6192 });
         const cube = new THREE.Mesh(geometry, material);
         scene.add(cube);
 
