update: background and camera

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>No mientas por convivir</title>
     <style>
         body {
-            background-color: black;
-            color: white;
+            background-color: white;
+            color: black;
         }
 
         #info {
@@ -40,7 +40,7 @@
         const cube = new THREE.Mesh(geometry, material);
         scene.add(cube);
 
-        camera.position.z = 5;
+        camera.position.z = 10;
 
         const animate = function () {
             requestAnimationFrame(animate);
